# swiss-environment-mcp

./: CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  Procfile  README.de.md  README.md  README_EN.md  claude_desktop_config.json  pyproject.toml  render.yaml
src/swiss_environment_mcp/: __init__.py  api_client.py  server.py
tests/: test_20_scenarios.py  test_integration.py
