[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-environment-mcp"
version = "0.1.0"
description = "MCP Server für Schweizer Umweltdaten des BAFU – Luft, Wasser, Naturgefahren und Umweltindikatoren"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["mcp", "bafu", "umwelt", "switzerland", "open-data", "air-quality", "hydrology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/malkreide/swiss-environment-mcp"
Repository = "https://github.com/malkreide/swiss-environment-mcp"

[project.scripts]
swiss-environment-mcp = "swiss_environment_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_environment_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"src/swiss_environment_mcp/server.py" = ["E501"]
